--- a/Chi_Squared_Test.ipynb
+++ b/Chi_Squared_Test.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 594,
    "metadata": {},
    "outputs": [
     {
@@ -368,17 +368,17 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Not Satisfied</td>\n",
-       "      <td>Not Satisfied</td>\n",
+       "      <td>Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Not Satisfied</td>\n",
+       "      <td>Satisfied</td>\n",
        "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Not Satisfied</td>\n",
-       "      <td>Not Satisfied</td>\n",
+       "      <td>Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -388,7 +388,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Satisfied</td>\n",
-       "      <td>Not Satisfied</td>\n",
+       "      <td>Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -408,7 +408,7 @@
        "    <tr>\n",
        "      <th>782</th>\n",
        "      <td>Not Satisfied</td>\n",
-       "      <td>Satisfied</td>\n",
+       "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>783</th>\n",
@@ -417,8 +417,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>784</th>\n",
-       "      <td>Satisfied</td>\n",
        "      <td>Not Satisfied</td>\n",
+       "      <td>Satisfied</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -427,22 +427,22 @@
       ],
       "text/plain": [
        "         Version_A      Version_B\n",
-       "0    Not Satisfied  Not Satisfied\n",
-       "1    Not Satisfied  Not Satisfied\n",
-       "2    Not Satisfied  Not Satisfied\n",
+       "0    Not Satisfied      Satisfied\n",
+       "1        Satisfied  Not Satisfied\n",
+       "2    Not Satisfied      Satisfied\n",
        "3    Not Satisfied  Not Satisfied\n",
-       "4        Satisfied  Not Satisfied\n",
+       "4        Satisfied      Satisfied\n",
        "..             ...            ...\n",
        "780  Not Satisfied  Not Satisfied\n",
        "781  Not Satisfied  Not Satisfied\n",
-       "782  Not Satisfied      Satisfied\n",
+       "782  Not Satisfied  Not Satisfied\n",
        "783  Not Satisfied  Not Satisfied\n",
-       "784      Satisfied  Not Satisfied\n",
+       "784  Not Satisfied      Satisfied\n",
        "\n",
        "[785 rows x 2 columns]"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 594,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [
     {
@@ -610,42 +610,293 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Pre-determined alpha value\n",
-    "# alpha = 0.05"
+    "# Pre-determined alpha value\n",
+    "alpha = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 615,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary Stats:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test</th>\n",
+       "      <th>lambda</th>\n",
+       "      <th>chi2</th>\n",
+       "      <th>dof</th>\n",
+       "      <th>pval</th>\n",
+       "      <th>cramer</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>22.078</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.119</td>\n",
+       "      <td>0.997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cressie-read</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>22.115</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.119</td>\n",
+       "      <td>0.997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>log-likelihood</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>22.245</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.119</td>\n",
+       "      <td>0.997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>freeman-tukey</td>\n",
+       "      <td>-0.500</td>\n",
+       "      <td>22.394</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.119</td>\n",
+       "      <td>0.997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mod-log-likelihood</td>\n",
+       "      <td>-1.000</td>\n",
+       "      <td>22.587</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>neyman</td>\n",
+       "      <td>-2.000</td>\n",
+       "      <td>23.116</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>0.998</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 test  lambda    chi2  dof  pval  cramer  power\n",
+       "0             pearson   1.000  22.078  1.0   0.0   0.119  0.997\n",
+       "1        cressie-read   0.667  22.115  1.0   0.0   0.119  0.997\n",
+       "2      log-likelihood   0.000  22.245  1.0   0.0   0.119  0.997\n",
+       "3       freeman-tukey  -0.500  22.394  1.0   0.0   0.119  0.997\n",
+       "4  mod-log-likelihood  -1.000  22.587  1.0   0.0   0.120  0.997\n",
+       "5              neyman  -2.000  23.116  1.0   0.0   0.121  0.998"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected Counts:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Satisfied</th>\n",
+       "      <th>Not Satisfied</th>\n",
+       "      <th>Satisfied</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Version_A</th>\n",
+       "      <td>625.0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Version_B</th>\n",
+       "      <td>625.0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Satisfied  Not Satisfied  Satisfied\n",
+       "Group                              \n",
+       "Version_A          625.0      160.0\n",
+       "Version_B          625.0      160.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Observed Counts:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Satisfied</th>\n",
+       "      <th>Not Satisfied</th>\n",
+       "      <th>Satisfied</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Version_A</th>\n",
+       "      <td>587.5</td>\n",
+       "      <td>197.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Version_B</th>\n",
+       "      <td>662.5</td>\n",
+       "      <td>122.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Satisfied  Not Satisfied  Satisfied\n",
+       "Group                              \n",
+       "Version_A          587.5      197.5\n",
+       "Version_B          662.5      122.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject the null hypothesis. The categories are likely dependent\n",
+      "There is a significant difference in satisfaction levels between the two website versions.\n"
+     ]
+    }
+   ],
    "source": [
+    "# Melt the df\n",
+    "chi_squared_melted_data = chi_squared_data.melt().rename(columns = {'variable':'Group', 'value':'Satisfied'})\n",
     "\n",
-    "# # Perform chi-squared test for proportions using pingouin (bootstrap)\n",
-    "# expected, observed, stats = chi2_independence(chi_squared_data, x='Version_A', y='Version_B', correction=True)\n",
+    "# Perform chi-squared test for proportions using pingouin (bootstrap)\n",
+    "expected, observed, stats = chi2_independence(chi_squared_melted_data, x='Group', y='Satisfied', correction=True)\n",
     "\n",
-    "# print(f'Expected Counts:')\n",
-    "# display(expected)\n",
+    "# Similar categorical variables should present low chi-squared statistics and high p-values.\n",
+    "print(\"Summary Stats:\")\n",
+    "display(stats.round(3))\n",
     "\n",
-    "# print(f'\\nObserved Counts:')\n",
-    "# display(observed)\n",
+    "print(f'Expected Counts:')\n",
+    "display(expected)\n",
     "\n",
-    "# # Similar categorical variables should present low chi-squared statistics and high p-values.\n",
-    "# print(\"Summary Stats:\")\n",
-    "# display(stats.round(3))\n",
+    "print(f'\\nObserved Counts:')\n",
+    "display(observed)\n",
     "\n",
-    "# avg_p = stats['pval'].mean()\n",
+    "avg_p = stats['pval'].mean()\n",
     "\n",
-    "# # Check for statistical significance\n",
-    "# if avg_p < alpha:\n",
-    "#     conclusion = \"Reject the null hypothesis. The categories are likely dependent\"\n",
-    "#     interpretation = \"There is a significant difference in satisfaction levels between the two website versions.\"\n",
-    "# else:\n",
-    "#     conclusion = \"Fail to reject the null hypothesis. The categories are likely independent\"\n",
-    "#     interpretation = \"There is no significant difference in satisfaction levels between the two website versions.\"\n",
+    "# Check for statistical significance\n",
+    "if avg_p < alpha:\n",
+    "    conclusion = \"Reject the null hypothesis. The categories are likely dependent\"\n",
+    "    interpretation = \"There is a significant difference in satisfaction levels between the two website versions.\"\n",
+    "else:\n",
+    "    conclusion = \"Fail to reject the null hypothesis. The categories are likely independent\"\n",
+    "    interpretation = \"There is no significant difference in satisfaction levels between the two website versions.\"\n",
     "\n",
-    "# print(conclusion)\n",
-    "# print(interpretation)"
+    "print(conclusion)\n",
+    "print(interpretation)"
    ]
   },
   {
