--- a/Chi_Squared_Test.ipynb
+++ b/Chi_Squared_Test.ipynb
@@ -276,6 +276,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 785 samples required per group\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Chi-Squared Power Analysis (pingouin)\n",
+    "\n",
+    "# Degree of freedom (depends on the chosen test).\n",
+    "# A 2x2 contingency table has 1 degree of freedom. \n",
+    "dof=1\n",
+    "# Cohen’s w effect size\n",
+    "# For a 2 x 2 table, the absolute value of the phi statistic is the same as Cohen's w. \n",
+    "# The value of Cohen's w is not bound by 1 on the upper end.\n",
+    "w=0.1\n",
+    "# Significance level (type I error probability).\n",
+    "alpha = 0.05\n",
+    "# Test power (= 1 - type II error).\n",
+    "power = 0.8\n",
+    "# Exactly ONE of the parameters must be passed as None, and that parameter is determined from the others. \n",
+    "n = None\n",
+    "\n",
+    "# The degrees of freedom dof must always be specified\n",
+    "sample_size = power_chi2(dof=dof, w=w, power=power, alpha=alpha, n=n)\n",
+    "\n",
+    "print(f\"There are {int(np.ceil(sample_size))} samples required per group\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 549,
    "metadata": {},
    "outputs": [
