--- a/Chi_Squared_Test.ipynb
+++ b/Chi_Squared_Test.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "from statsmodels.stats.proportion import proportions_chisquare\n",
     "\n",
     "# !pip install scipy==1.12.0\n",
-    "from scipy.stats import chi2_contingency\n",
+    "from scipy.stats import chi2_contingency, chi2\n",
     "\n",
     "# !pip install pingouin==0.5.4\n",
     "from pingouin import chi2_independence, power_chi2 \n"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "'0.12.2'"
       ]
      },
-     "execution_count": 541,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "'1.12.0'"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "'0.5.4'"
       ]
      },
-     "execution_count": 543,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -404,17 +404,17 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Not Satisfied</td>\n",
-       "      <td>Satisfied</td>\n",
+       "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Satisfied</td>\n",
+       "      <td>Not Satisfied</td>\n",
        "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Not Satisfied</td>\n",
-       "      <td>Satisfied</td>\n",
+       "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -424,7 +424,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Satisfied</td>\n",
-       "      <td>Satisfied</td>\n",
+       "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -444,7 +444,7 @@
        "    <tr>\n",
        "      <th>782</th>\n",
        "      <td>Not Satisfied</td>\n",
-       "      <td>Not Satisfied</td>\n",
+       "      <td>Satisfied</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>783</th>\n",
@@ -453,8 +453,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>784</th>\n",
-       "      <td>Not Satisfied</td>\n",
        "      <td>Satisfied</td>\n",
+       "      <td>Not Satisfied</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -463,22 +463,22 @@
       ],
       "text/plain": [
        "         Version_A      Version_B\n",
-       "0    Not Satisfied      Satisfied\n",
-       "1        Satisfied  Not Satisfied\n",
-       "2    Not Satisfied      Satisfied\n",
+       "0    Not Satisfied  Not Satisfied\n",
+       "1    Not Satisfied  Not Satisfied\n",
+       "2    Not Satisfied  Not Satisfied\n",
        "3    Not Satisfied  Not Satisfied\n",
-       "4        Satisfied      Satisfied\n",
+       "4        Satisfied  Not Satisfied\n",
        "..             ...            ...\n",
        "780  Not Satisfied  Not Satisfied\n",
        "781  Not Satisfied  Not Satisfied\n",
-       "782  Not Satisfied  Not Satisfied\n",
+       "782  Not Satisfied      Satisfied\n",
        "783  Not Satisfied  Not Satisfied\n",
-       "784  Not Satisfied      Satisfied\n",
+       "784      Satisfied  Not Satisfied\n",
        "\n",
        "[785 rows x 2 columns]"
       ]
      },
-     "execution_count": 594,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -697,61 +697,61 @@
        "      <th>0</th>\n",
        "      <td>pearson</td>\n",
        "      <td>1.000</td>\n",
-       "      <td>22.078</td>\n",
+       "      <td>29.912</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>0.997</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cressie-read</td>\n",
        "      <td>0.667</td>\n",
-       "      <td>22.115</td>\n",
+       "      <td>29.978</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>0.997</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>log-likelihood</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>22.245</td>\n",
+       "      <td>30.212</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>0.997</td>\n",
+       "      <td>0.139</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>freeman-tukey</td>\n",
        "      <td>-0.500</td>\n",
-       "      <td>22.394</td>\n",
+       "      <td>30.479</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>0.997</td>\n",
+       "      <td>0.139</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>mod-log-likelihood</td>\n",
        "      <td>-1.000</td>\n",
-       "      <td>22.587</td>\n",
+       "      <td>30.829</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.120</td>\n",
-       "      <td>0.997</td>\n",
+       "      <td>0.140</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>neyman</td>\n",
        "      <td>-2.000</td>\n",
-       "      <td>23.116</td>\n",
+       "      <td>31.792</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.121</td>\n",
-       "      <td>0.998</td>\n",
+       "      <td>0.142</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -759,12 +759,12 @@
       ],
       "text/plain": [
        "                 test  lambda    chi2  dof  pval  cramer  power\n",
-       "0             pearson   1.000  22.078  1.0   0.0   0.119  0.997\n",
-       "1        cressie-read   0.667  22.115  1.0   0.0   0.119  0.997\n",
-       "2      log-likelihood   0.000  22.245  1.0   0.0   0.119  0.997\n",
-       "3       freeman-tukey  -0.500  22.394  1.0   0.0   0.119  0.997\n",
-       "4  mod-log-likelihood  -1.000  22.587  1.0   0.0   0.120  0.997\n",
-       "5              neyman  -2.000  23.116  1.0   0.0   0.121  0.998"
+       "0             pearson   1.000  29.912  1.0   0.0   0.138    1.0\n",
+       "1        cressie-read   0.667  29.978  1.0   0.0   0.138    1.0\n",
+       "2      log-likelihood   0.000  30.212  1.0   0.0   0.139    1.0\n",
+       "3       freeman-tukey  -0.500  30.479  1.0   0.0   0.139    1.0\n",
+       "4  mod-log-likelihood  -1.000  30.829  1.0   0.0   0.140    1.0\n",
+       "5              neyman  -2.000  31.792  1.0   0.0   0.142    1.0"
       ]
      },
      "metadata": {},
@@ -810,13 +810,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Version_A</th>\n",
-       "      <td>625.0</td>\n",
-       "      <td>160.0</td>\n",
+       "      <td>621.5</td>\n",
+       "      <td>163.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Version_B</th>\n",
-       "      <td>625.0</td>\n",
-       "      <td>160.0</td>\n",
+       "      <td>621.5</td>\n",
+       "      <td>163.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -825,8 +825,8 @@
       "text/plain": [
        "Satisfied  Not Satisfied  Satisfied\n",
        "Group                              \n",
-       "Version_A          625.0      160.0\n",
-       "Version_B          625.0      160.0"
+       "Version_A          621.5      163.5\n",
+       "Version_B          621.5      163.5"
       ]
      },
      "metadata": {},
@@ -873,13 +873,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Version_A</th>\n",
-       "      <td>587.5</td>\n",
-       "      <td>197.5</td>\n",
+       "      <td>577.5</td>\n",
+       "      <td>207.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Version_B</th>\n",
-       "      <td>662.5</td>\n",
-       "      <td>122.5</td>\n",
+       "      <td>665.5</td>\n",
+       "      <td>119.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -888,8 +888,8 @@
       "text/plain": [
        "Satisfied  Not Satisfied  Satisfied\n",
        "Group                              \n",
-       "Version_A          587.5      197.5\n",
-       "Version_B          662.5      122.5"
+       "Version_A          577.5      207.5\n",
+       "Version_B          665.5      119.5"
       ]
      },
      "metadata": {},
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1035,11 +1035,14 @@
       "\n",
       "\n",
       "Difference in Proportions: -0.11337579617834395\n",
-      "95% Confidence Interval of Difference in Proportions: [-0.22564143901372927, -0.0011101533429586363]\n"
+      "95% Confidence Interval of Difference in Proportions: [-0.15315577671538486, -0.07359581564130305]\n"
      ]
     }
    ],
    "source": [
+    "# Confidence interval\n",
+    "confidence_interval = 0.95\n",
+    "\n",
     "# Calculate proportions\n",
     "n_a = a_positive + a_negative\n",
     "n_b = b_positive + b_negative\n",
@@ -1053,11 +1056,11 @@
     "# Calculate standard error of the difference\n",
     "se_diff = np.sqrt(se_a**2 + se_b**2)\n",
     "\n",
-    "# Critical value for 95% confidence interval (df=1)\n",
-    "critical_value = 3.841  # From chi-squared distribution table\n",
+    "# Critical value for confidence interval\n",
+    "critical_value = chi2.ppf(confidence_interval, df=dof)\n",
     "\n",
     "# Margin of error\n",
-    "margin_of_error = np.sqrt(chi2_stat / dof) * se_diff\n",
+    "margin_of_error =   np.sqrt(critical_value / dof) * se_diff\n",
     "\n",
     "# Calculate confidence interval\n",
     "diff_proportion = prop_b - prop_a\n",
