--- a/Chi_Squared_Test.ipynb
+++ b/Chi_Squared_Test.ipynb
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
     "# Print results\n",
     "print(\"\\n\")\n",
     "print(f\"Difference in Proportions: {diff_proportion}\")\n",
-    "print(f\"95% Confidence Interval of Difference in Proportions: [{lower_bound}, {upper_bound}]\")"
+    "print(f\"{int(confidence_interval*100)}% Confidence Interval of Difference in Proportions: [{lower_bound}, {upper_bound}]\")"
    ]
   },
   {
