--- a/Binomial_Test.ipynb
+++ b/Binomial_Test.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "> Use Case\n",
-    "- Used when dealing with a dichotomous outcome (success/failure) and comparing the proportion of successes between two groups.\n",
+    "- Used when dealing with a dichotomous outcome (success/failure) and comparing the proportion of successes between two independent groups.\n",
     "- Useful when the sample size is small.\n",
     "- Can have different sample sizes.\n",
     "> Assumptions\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "'0.12.2'"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "'1.12.0'"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[910 rows x 2 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [257], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m count \u001b[38;5;241m=\u001b[39m binomial_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNew_Ad_Campaign\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      2\u001b[0m nobs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(binomial_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNew_Ad_Campaign\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m \u001b[43mbinom_test\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcount\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcount\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhistorical_ctr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malternative\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtwo-sided\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn [33], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m count \u001b[38;5;241m=\u001b[39m binomial_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNew_Ad_Campaign\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      2\u001b[0m nobs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(binomial_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNew_Ad_Campaign\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m \u001b[43mbinom_test\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcount\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcount\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprop\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhistorical_ctr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malternative\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtwo-sided\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/ab_env/lib/python3.9/site-packages/statsmodels/stats/proportion.py:626\u001b[0m, in \u001b[0;36mbinom_test\u001b[0;34m(count, nobs, prop, alternative)\u001b[0m\n\u001b[1;32m    624\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp must be in range [0,1]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    625\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m alternative \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2s\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtwo-sided\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m--> 626\u001b[0m     pval \u001b[38;5;241m=\u001b[39m \u001b[43mstats\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbinom_test\u001b[49m(count, n\u001b[38;5;241m=\u001b[39mnobs, p\u001b[38;5;241m=\u001b[39mprop)\n\u001b[1;32m    627\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m alternative \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlarger\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m    628\u001b[0m     pval \u001b[38;5;241m=\u001b[39m stats\u001b[38;5;241m.\u001b[39mbinom\u001b[38;5;241m.\u001b[39msf(count\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, nobs, prop)\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'scipy.stats' has no attribute 'binom_test'"
      ]
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "1   Group B: Historical CTR    910    145       765            0.159341"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -880,14 +880,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cohen's h Effect Size: 0.02207263262511383\n",
+      "Cohen's h Effect Size: 0.04414526525022766\n",
       "\n",
       "\n",
       "There is a small difference between the two groups.\n"
@@ -896,18 +896,18 @@
    ],
    "source": [
     "# Cohen's h effect size\n",
-    "h = np.arcsin(np.sqrt(prop_A)) - np.arcsin(np.sqrt(prop_B))\n",
+    "h = np.abs((2*np.arcsin(np.sqrt(prop_A))) - (2*np.arcsin(np.sqrt(prop_B))))\n",
     "\n",
     "print(f\"Cohen's h Effect Size: {h}\")\n",
     "print(\"\\n\")\n",
     "\n",
-    "if abs(h) == 0:\n",
+    "if h == 0:\n",
     "    print(\"There is no difference between the two groups.\")\n",
-    "elif abs(h) <= 0.2:\n",
+    "elif h <= 0.2:\n",
     "    print(\"There is a small difference between the two groups.\")\n",
-    "elif abs(h) <= 0.5:\n",
+    "elif h <= 0.5:\n",
     "    print(\"There is a moderate difference between the two groups.\")\n",
-    "elif abs(h) <= 0.8:\n",
+    "elif h <= 0.8:\n",
     "    print(\"There is a large difference between the two groups.\")\n",
     "else:\n",
     "    print(\"There is a very large difference between the two groups.\")"
